overflow error resolved

--- a/style.css
+++ b/style.css
@@ -155,12 +155,14 @@
 /* =============================================
    BASE
    ============================================= */
+
 *,
 *::before,
 *::after {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    /* overflow-x: hidden; */
 }
 
 html {
@@ -1844,6 +1846,14 @@ footer {
 }
 
 @media (max-width: 700px) {
+    html {
+        overflow-x: hidden;
+    }
+
+    body {
+        overflow-x: hidden;
+    }
+
     .services-grid {
         grid-template-columns: 1fr;
     }
